src/test/deca/syntax/invalid/wrong_decl8.deca
//Description
//    Vérifier la decl d'attributs
//
//Résultats :
//    Erreur Syntaxique ligne 8
//


class A{
float else = 3.0;
}
